examples/cybelynxcore-production/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cybelynxcore-production
  labels:
    app.kubernetes.io/part-of: cybelynxcore
    environment: production
