examples/cybelynxcore-production/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cybelynxcore-api
  namespace: cybelynxcore-production
  labels:
    app.kubernetes.io/name: cybelynxcore-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cybelynxcore-api
  ports:
    - name: http
      port: 8000
      targetPort: http
