examples/cybelynxcore-production/kubernetes/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cybelynxcore-api
  namespace: cybelynxcore-production
  labels:
    app.kubernetes.io/name: cybelynxcore-api
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.cybelynxcore.test`)
      kind: Rule
      services:
        - name: cybelynxcore-api
          port: 8000
  tls: {}
